<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_1"
        android:title="@string/drawer_home"
        android:icon="@drawable/fa_home"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_2"
        android:title="@string/drawer_share"
        android:icon="@drawable/fa_share"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_3"
        android:title="@string/drawer_rate"
        android:icon="@drawable/fa_stars"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_4"
        android:title="@string/drawer_more"
        android:icon="@drawable/fa_plus"
        app:showAsAction="ifRoom"/>
<!--    <item-->
<!--        android:id="@+id/menu_5"-->
<!--        android:title="@string/drawer_privacy"-->
<!--        android:icon="@drawable/fa_lock"-->
<!--        app:showAsAction="ifRoom"/>-->

</menu>