<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btn_frame"
        android:orientation="vertical"
        >
        <LinearLayout
            android:id="@+id/gdpr_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="5dp"
            >
            <TextView
                android:id="@+id/title_gdpr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gdpr_title"
                android:textColor="@color/dark_black"
                android:layout_marginBottom="10dp"
                android:textSize="16sp"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/body_gdpr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gdpr_body"
                android:textColor="@color/dark_black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/dark_black"
                android:layout_marginBottom="1dp"
                android:layout_marginTop="5dp"/>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/dark_black"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="5dp"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/privacy_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/title_privacy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacy_title"
                android:gravity="center_horizontal"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/dark_black"
                android:layout_marginBottom="5dp"/>
            <WebView
                android:id="@+id/privacy_policy_dialog"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/btn_frame"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        >
        <Button
            android:id="@+id/btn_decline"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="decline"
            android:layout_marginStart="5dp"
            android:layout_alignParentStart="true"
            android:layout_centerHorizontal="true"
            />
        <Button
            android:id="@+id/btn_accept"
            android:text="accept"
            android:layout_marginEnd="5dp"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            />
    </RelativeLayout>
</RelativeLayout>